# declawsified

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
.claude/: settings.json  settings.local.json
docs/: cost-attribution-readme.md  des-4000-execution-notes.md  eval-datasets.md  idea.md  manager-analysis.md  phase-a-findings.md  plan-classification-review1.md  plan-classification.md  plan-cost-attribution.md  plan-domain-packs.md  plan-ground-truth.md  plan.md  proxy.md  research-agent-internals.md  research-auto-tagging.md  research-cost-tracking.md  research-debugging.md  research-integration.md  research-manus.md  research-manus2.md  research-market.md  research-sentiment.md  research-summary-claude.md  research-summary-cursor.md  status-classification.md  streamlit.md
docs/eval-baselines/phase_a/: summary.md
scripts/: analyze_classification_report.py  build_taxonomy_embeddings.py  classify_all_local.py  classify_chatgpt_export.py  classify_claude_export.py  cost_attribution.py  declawsified-statusline.py  expand_taxonomy_batch.py  expand_taxonomy_kimi.py  expand_taxonomy_pass2.py  expand_taxonomy_pass3.py  expand_taxonomy_pass4.py  expand_taxonomy_pass5.py  expand_taxonomy_pass6.py  expand_taxonomy_pass7.py  validate_taxonomy_coverage.py
scripts/eval/: _common.py  phase_a_a1_sports.py  phase_a_a2_entertainment.py  phase_a_a3_engineering.py  phase_a_a4_sensitive.py  phase_a_a5_embedding_dbpedia.py  phase_a_a6_domain_massive.py  phase_a_run_all.py  phase_b_annotate.py  phase_b_metrics.py  phase_b_predict.py  phase_b_quality.py  phase_b_sample.py  phase_b_sweep_thresholds.py  test_cost_attribution.py
scripts/eval/prompts/: des_annotation.py
sources/dashboard/: README.md  pyproject.toml
sources/dashboard/declawsified_dashboard/: __init__.py  aggregations.py  app.py  cli.py  config.py  formatting.py  state.py
sources/dashboard/declawsified_dashboard/pages/: _facet_breakdown.py  calls.py  classifier_health.py  matrix.py  overview.py  projects.py  sessions.py  settings.py  tags.py
sources/dashboard/tests/: test_aggregations.py  test_all_pages.py  test_data_loader.py  test_facet_pages.py  test_overview_app.py
sources/declawsified-core/: README.md  pyproject.toml
sources/declawsified-core/declawsified_core/: __init__.py  aggregator.py  api.py  models.py  pipeline.py  registry.py
sources/declawsified-core/declawsified_core/data/: __init__.py
sources/declawsified-core/declawsified_core/data/taxonomies/: __init__.py  hybrid-v1.yaml  hybrid-v2.yaml
sources/declawsified-core/declawsified_core/facets/: __init__.py  activity.py  base.py  context.py  domain.py  phase.py  project.py  tags.py
sources/declawsified-core/declawsified_core/session/: __init__.py  arc_revision.py  arcs.py  backprop.py  boundaries.py  continuity.py  history.py  store.py
sources/declawsified-core/declawsified_core/taxonomy/: __init__.py  embedder.py  index.py  llm_walker.py  loader.py  models.py  pipeline.py  pruning.py  rejection.py  walker.py
sources/declawsified-core/tests/: test_arc_pipeline.py  test_arc_revision.py  test_arcs.py  test_backprop.py  test_call_history.py  test_claude_export_stats.py  test_embedding_tagger.py  test_keyword_tagger.py  test_llm_walker.py  test_llm_walker_kimi_integration.py  test_pipeline_smoke.py  test_project_classifiers.py  test_project_tree_path.py  test_session_boundaries.py  test_session_continuity.py  test_session_integration.py  test_session_store.py  test_taxonomy_embedder.py  test_taxonomy_index.py  test_taxonomy_loader.py  test_taxonomy_ml_integration.py  test_taxonomy_models.py  test_taxonomy_pipeline.py  test_taxonomy_pruning.py  test_taxonomy_rejection.py  test_taxonomy_walker.py  test_two_pass_integration.py
sources/declawsified-eval/: README.md  pyproject.toml
sources/declawsified-eval/declawsified_eval/: __init__.py  metrics.py  models.py  report.py  runner.py
sources/declawsified-eval/declawsified_eval/crosswalks/: __init__.py  dbpedia_to_declawsified.yaml  deeppavlov_to_declawsified.yaml  massive_to_declawsified.yaml
sources/declawsified-eval/tests/: test_metrics.py
sources/declawsified-proxy/: pyproject.toml
sources/declawsified-proxy/declawsified_proxy/: __init__.py  __main__.py  config.py  extractor.py  server.py  spend_log.py  state.py
sources/declawsified-proxy/tests/: test_extractor.py  test_server_spend_wiring.py  test_spend_log.py  test_state.py
