[project]
name = "declawsified-dashboard"
version = "0.0.1"
description = "Read-only Streamlit dashboard for the Declawsified spend log."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Declawsified" }]
dependencies = [
    "streamlit>=1.40",
    "pandas>=2.0",
    "plotly>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
declawsified-dashboard = "declawsified_dashboard.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["declawsified_dashboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
