[project]
name = "declawsified-core"
version = "0.0.1"
description = "Declawsified classification engine: faceted pipeline contract and mock classifiers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Declawsified" }]
dependencies = [
    "pydantic>=2.6,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["declawsified_core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
