[project]
name = "declawsified-eval"
version = "0.0.1"
description = "Eval harness for declawsified — Phase A/B benchmarks vs public datasets and DES-2000."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Declawsified" }]
dependencies = [
    "declawsified-core",
    "pydantic>=2.6,<3",
    "pyyaml>=6",
    "numpy>=1.26",
]

[project.optional-dependencies]
hf = [
    # HuggingFace ecosystem — needed by every Phase A loader.
    "datasets>=2.18",
    "scikit-learn>=1.3",
    "pandas>=2.0",
]
ml = [
    # Phase A5 (EmbeddingTagger vs DBPedia) needs sentence-transformers.
    "sentence-transformers>=2.5",
]
anthropic = [
    # Phase B annotation only.
    "anthropic>=0.40",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["declawsified_eval"]

[tool.hatch.build.targets.wheel.force-include]
"declawsified_eval/crosswalks" = "declawsified_eval/crosswalks"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "hf: tests that require the [hf] extras (datasets, sklearn, pandas)",
    "ml: tests that require the [ml] extras (sentence-transformers)",
    "network: tests that hit HuggingFace Hub and download datasets",
]
