[project]
name = "declawsified-proxy"
version = "0.0.1"
description = "Transparent classification proxy for Claude Code"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "declawsified-core",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
